# postmortem-drafter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: timeline.csv
src/postmortem_drafter/: __init__.py  __main__.py  cli.py  drafter.py  io.py  models.py
tests/: test_postmortem_drafter.py
